--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="profile-card">
         <div class="image">
-            <img src="c:\Users\HP\OneDrive\Pictures\DP.jpeg" alt="" class="profile-img">
+            <img src="https://media.licdn.com/dms/image/D4D03AQFWD6mHibqX2w/profile-displayphoto-shrink_800_800/0/1701868397033?e=1721260800&v=beta&t=t6Jtdx_x8EgIsAIqtMeve_2-Mr1e28mfmCTSNjZYqWU" alt="" class="profile-img">
         </div>
     
     <div class="text-data">
